# datanymizer

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  ci.yml  linters.yml  release.yml  site.yml  test-release.yml
cli/mssql_datanymizer/: Cargo.toml
cli/mssql_datanymizer/src/: app.rs  main.rs  options.rs
cli/mysql_datanymizer/: Cargo.toml  install.sh
cli/mysql_datanymizer/src/: app.rs  main.rs  options.rs
cli/pg_datanymizer/: Cargo.toml  install.sh
cli/pg_datanymizer/src/: app.rs  main.rs  options.rs
cli/pg_dump_faker/: Cargo.toml
cli/pg_dump_faker/src/: main.rs  options.rs
datanymizer_dumper/: Cargo.toml
datanymizer_dumper/src/: indicator.rs  lib.rs  progress_bar.rs
datanymizer_dumper/src/mssql/: column.rs  dumper.rs  mod.rs  row.rs  schema_inspector.rs  scripter.rs  sql_type.rs  table.rs  value.rs
datanymizer_dumper/src/mysql/: column.rs  connector.rs  decoder.rs  dumper.rs  mod.rs  schema_inspector.rs  table.rs
datanymizer_dumper/src/postgres/: column.rs  connector.rs  dumper.rs  escaper.rs  foreign_key.rs  mod.rs  query_wrapper.rs  row.rs  schema_inspector.rs  sequence.rs  table.rs  writer.rs
datanymizer_dumper/tests/postgres/: connector.rs  dumper.rs  schema_inspector.rs
datanymizer_dumper/tests/postgres/dumps/: common.dump  common.sql
datanymizer_dumper/tests/postgres/helpers/: mod.rs
datanymizer_engine/: Cargo.toml
datanymizer_engine/docs/: new_fk_transformer.md
datanymizer_engine/examples/: faker.rs
datanymizer_engine/src/: engine.rs  errors.rs  lib.rs  settings.rs  store.rs  transformer.rs  uniq_collector.rs  utils.rs  value.rs
datanymizer_engine/src/generator/: foreign_key.rs  key.rs  mod.rs  seq_to_rand.rs
datanymizer_engine/src/locale/: ext_data.rs  mod.rs  ru.rs
datanymizer_engine/src/settings/: filter.rs  filter_config.rs  mod.rs  table.rs  templates.rs
datanymizer_engine/src/transformer/: context.rs  mod.rs  uniq_transformer.rs  uniqueness.rs
datanymizer_engine/src/transformers/: capitalize.rs  city.rs  datetime.rs  mod.rs  names.rs  none.rs  number.rs  phone.rs  pipeline.rs  plain.rs  template.rs  token.rs  uuid.rs
datanymizer_engine/src/transformers/datetime/: format.rs  mod.rs
datanymizer_engine/src/transformers/fk/: configs.rs  fakers.rs  mod.rs  sql_value.rs
datanymizer_engine/src/transformers/internet/: email.rs  ip.rs  mod.rs  password.rs
datanymizer_engine/src/transformers/json/: mod.rs  selector.rs
datanymizer_engine/src/transformers/lorem/: mod.rs  words.rs
datanymizer_engine/src/transformers/phone/: deserializer.rs  mod.rs  phone_format.rs  transformer.rs
datanymizer_engine/src/transformers/phone_north_america/: mod.rs  transformer.rs
datanymizer_engine/src/transformers/template/: functions.rs  hash_functions.rs  mod.rs  store_functions.rs  time_functions.rs
datanymizer_engine/src/transformers/token/: base64.rs  base64url.rs  hex.rs  mod.rs
datanymizer_engine/src/utils/: enum_deser.rs  format_time.rs  mod.rs
datanymizer_engine/tests/: new_fk_transformer.rs
demo/: Dockerfile.pg_datanymizer  Dockerfile.pg_datanynizer  Makefile  README.md  docker-compose.yml  dvdrental.yml
docs/: config.md  integration_tests.md  pg_datanymizer.md  transformers.md
dumpers/datanymizer_dumper/: Cargo.toml
dumpers/datanymizer_dumper/src/: lib.rs  progress_bar.rs  writer.rs
dumpers/mssql_datanymizer_dumper/: Cargo.toml
dumpers/mssql_datanymizer_dumper/src/: column.rs  connector.rs  dumper.rs  lib.rs  row.rs  schema_inspector.rs  sql_type.rs  table.rs  value.rs
dumpers/pg_datanymizer_dumper/: Cargo.toml
dumpers/pg_datanymizer_dumper/src/: column.rs  dumper.rs  escaper.rs  foreign_key.rs  lib.rs  row.rs  schema_inspector.rs  table.rs
dumpers/pg_datanymizer_dumper/tests/: integration.rs
dumpers/pg_datanymizer_dumper/tests/configs/: simple.yml
dumpers/pg_datanymizer_dumper/tests/connector/: mod.rs
dumpers/pg_datanymizer_dumper/tests/dumper/: mod.rs
dumpers/pg_datanymizer_dumper/tests/helpers/: mod.rs
dumpers/pg_datanymizer_dumper/tests/schema_inspector/: mod.rs
site/: config.toml
site/content/: _index.md
site/content/docs/: _index.md
site/content/docs/getting-started/: _index.md  cli-dumper.md  introduction.md  quick-start.md
site/content/docs/transformers/: _index.md  internet.md
