[workspace]
members = [
    "datanymizer_engine",
    "dumpers/datanymizer_dumper",
    "dumpers/mssql_datanymizer_dumper",
    "dumpers/pg_datanymizer_dumper",
    "cli/mssql_datanymizer",
    "cli/pg_datanymizer",
]

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
