[package]
name = "datanymizer_dumper"
version = "0.7.0"
authors = ["Aleksandr Kirillov <saratovsource@gmail.com>", "Evgeniy Rashchepkin <e.a.rashchepkin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datanymizer_engine = { path= "../datanymizer_engine" }
anyhow = "1.0"
indicatif = "0.17.3"
log = "0.4.17"
native-tls = "0.2.11"
postgres = "0.19.5"
postgres-native-tls = "0.5.0"
solvent = "0.8.3"
url = "2.3"

[features]
pg_db_tests = []
