[package]
name = "datanymizer_engine"
version = "0.5.0"
authors = ["Aleksandr Kirillov <saratovsource@gmail.com>", "Evgeniy Rashchepkin <e.a.rashchepkin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bcrypt = "0.12"
config = "0.13"
csv = "1.1"
fake = { version = "2.4.1" }
log = "0.4.16"
once_cell = "1.5.2"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.14"
# We need granular dependency management in Tera
tera = { git = "https://github.com/datanymizer/tera", default-features = false, features = ["slug", "percent-encoding", "humansize", "rand"] }
thiserror = "1.0"
time = { version = "0.3.7", features = ["local-offset", "formatting", "macros", "parsing"] }
time-tz = "1.0.2"
unicode-segmentation = "1.7.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
sha2 = { version = "0.9.5" }
wildmatch = "2.1.0"
# hexfmt = { package = "hex", version = "0.4.3" }
