[package]
name = "datanymizer_engine"
version = "0.7.1"
authors = ["Aleksandr Kirillov <saratovsource@gmail.com>", "Evgeniy Rashchepkin <e.a.rashchepkin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bcrypt = "0.14"
chrono = "0.4.31"
config = "0.13"
csv = "1.2"
fake = { version = "2.6.1", features = ["random_color"] }
log = "0.4.17"
jsonpath_lib = "0.3.0"
once_cell = "1.17.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
tera = "1.19.1"
thiserror = "1.0"
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
wildmatch = "2.1.1"
