[package]
name = "mssql_datanymizer"
version = "0.1.0"
authors = ["Evgeniy Rashchepkin <e.a.rashchepkin@gmail.com>", "Aleksandr Kirillov <saratovsource@gmail.com>"]
edition = "2018"
description = "Powerful database anonymizer with flexible rules"
homepage = "https://github.com/datanymizer/datanymizer"
license = "MIT"
readme = "README.md"
keywords = ["anonymizer", "data", "database", "microsoft sql server", "mssql-scripter", "faker"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9.0" }
datanymizer_dumper = {path = "../../dumpers/datanymizer_dumper"}
datanymizer_engine = {path = "../../datanymizer_engine"}
mssql_datanymizer_dumper = {path = "../../dumpers/mssql_datanymizer_dumper"}
structopt = "0.3.20"
url = "2.2"
