[package]
name = "pg_datanymizer"
version = "0.3.1"
authors = ["Aleksandr Kirillov <saratovsource@gmail.com>"]
edition = "2018"
description = "Powerful database anonymizer with flexible rules"
homepage = "https://github.com/datanymizer/datanymizer"
license = "MIT"
readme = "README.md"
keywords = ["anonymizer", "data", "database", "postgresql", "pg_dump", "faker"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
datanymizer_dumper = {path = "../../datanymizer_dumper"}
datanymizer_engine = {path = "../../datanymizer_engine"}
native-tls = "0.2.7"
postgres = "0.19.1"
postgres-native-tls = "0.5.0"
structopt = "0.3.20"
url = "2.2"
