[package]
name = "pg_datanymizer"
version = "0.6.0"
authors = ["Aleksandr Kirillov <saratovsource@gmail.com>"]
edition = "2021"
description = "Powerful database anonymizer with flexible rules"
homepage = "https://github.com/datanymizer/datanymizer"
license = "MIT"
readme = "README.md"
keywords = ["anonymizer", "data", "database", "postgresql", "pg_dump", "faker"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
datanymizer_dumper = {path = "../../datanymizer_dumper"}
datanymizer_engine = {path = "../../datanymizer_engine"}
env_logger = "0.10.0"
url = "2.3"
[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = ">=0.10.55" }
