[package]
name = "mssql_datanymizer_dumper"
version = "0.1.0"
authors = ["Evgeniy Rashchepkin <e.a.rashchepkin@gmail.com>", "Aleksandr Kirillov <saratovsource@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datanymizer_dumper = { path= "../datanymizer_dumper" }
datanymizer_engine = { path= "../../datanymizer_engine" }
anyhow = "1.0"
async-std = "1.9.0"
chrono = "0.4"
indicatif = "0.15.0"
tiberius = { version = "0.5.10", features = ["chrono", "sql-browser-async-std"] }
