[package]
name = "pg_datanymizer_dumper"
version = "0.1.0"
authors = ["Aleksandr Kirillov <saratovsource@gmail.com>", "Evgeniy Rashchepkin <e.a.rashchepkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datanymizer_dumper = { path= "../datanymizer_dumper" }
datanymizer_engine = { path= "../../datanymizer_engine" }
anyhow = "1.0"
native-tls = "0.2.7"
postgres = "0.19.1"
postgres-native-tls = "0.5.0"
url = "2.2"

[features]
pg_db_tests = []
