[package]
name = "pg_datanymizer_dumper"
version = "0.1.0"
authors = ["Aleksandr Kirillov <saratovsource@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datanymizer_dumper = { path= "../datanymizer_dumper" }
datanymizer_engine = { path= "../../datanymizer_engine" }
anyhow = "1.0"
indicatif = "0.15.0"
postgres = "0.18.1"
